Clean up search results. Use a grid-layout for track results

--- a/src/public/css/components/pm-search.css
+++ b/src/public/css/components/pm-search.css
@@ -9,13 +9,17 @@ pm-search form {
 }
 
 pm-search .form_actions {
-	align-self: end;	
+	align-self: end;
 }
 
-@media (min-width: 640px) {
+@media (min-width: 400px) {
 	pm-search form {
 		flex-direction: row;
 		align-items: end;
+	}
+
+	pm-search .form_row {
+		flex-grow: 1;
 	}
 }
 
