--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -1,5 +1,6 @@
 @import 'constants.css';
 @import 'defaults.css';
+@import 'patterns/list_tracks.css';
 @import 'patterns/form_row.css';
 @import 'patterns/form_field.css';
 @import 'components/pm-search.css';
