--- a/src/views/partials/form_search.njk
+++ b/src/views/partials/form_search.njk
@@ -3,7 +3,7 @@
 		<div class="form_row">
 			<label for="input_search_query">Search for a song:</label>
 			<div class="form_field">
-				<input type="search" name="query" id="input_search_query" value="{{ query }}" required>
+				<input type="search" name="query_text" id="input_search_query" value="{{ query }}" required>
 			</div>
 		</div>
 		<div class="form_actions">
