--- a/src/views/search.njk
+++ b/src/views/search.njk
@@ -4,33 +4,42 @@
 
 {% block content %}
 	{% include 'partials/form_search.njk' %}
-	<ul>
-		{% for item in items %}
-			<li>
-				<dl>
-					{# {{item | dump}} #}
-					<div>
-						<dt>Album art</dt>
-						<dd>
-							<img src="{{ item.album.images[0].url }}" width="32" height="32" alt>
-						</dd>
-					</div>
-					<div>
-						<dt>Artist(s)</dt>
-						{% for artist in item.artists %}
-							<dd>{{ artist.name }}</dd>
-						{% endfor %}
-					</div>
-					<div>
-						<dt>Track name</dt>
-						<dd>{{ item.name }}</dd>
-					</div>
-					<div>
-						<dt>Duration</dt>
-						<dd>{{ item.duration_ms }}</dd>
-					</div>
-				</dl>
-			</li>
-		{% endfor %}
-	</ul>
+	<form>
+		<ul class="list_tracks">
+			{% for item in items %}
+				<li>
+					<dl>
+						{# {{item | dump}} #}
+						<div class="track_album">
+							<dt>Album art</dt>
+							<dd>
+								<img src="{{ item.album.images[0].url }}" width="32" height="32" alt="{{ item.album.name }}">
+							</dd>
+						</div>
+						<div class="track_artists">
+							<dt>Artist(s)</dt>
+							{% for artist in item.artists %}
+								<dd>{{ artist.name }}</dd>
+							{% endfor %}
+						</div>
+						<div class="track_name">
+							<dt>Track name</dt>
+							<dd>{{ item.name }}</dd>
+						</div>
+						<div class="track_duration">
+							<dt>Duration</dt>
+							<dd>{{ item.duration_ms }}</dd>
+						</div>
+						<div class="track_actions">
+							<dt>Actions</dt>
+							<dd>
+								<button type="submit" name="add" value="{{ item.id }}">
+									Add
+								</button>
+						</div>
+					</dl>
+				</li>
+			{% endfor %}
+		</ul>
+	</form>
 {% endblock %}
