Fix a bug with the list_tracks pattern. Add view transitions

--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -1,4 +1,5 @@
 @import 'constants.css';
+@import 'view-transitions.css';
 @import 'defaults.css';
 @import 'patterns/list_tracks.css';
 @import 'patterns/form_row.css';
