--- a/src/views/home.njk
+++ b/src/views/home.njk
@@ -1,5 +1,8 @@
-{% set title = 'Play me more, DJ!' %}
-{% set page_heading = 'Play me more, DJ!' %}
+{% set page_meta = {
+	title: 'Play me more, DJ!',
+	page_heading: 'Play me more, DJ!',
+	id: 'home'
+} %}
 {% extends 'layouts/default.njk' %}
 
 {% block content %}
