--- a/src/views/search.njk
+++ b/src/views/search.njk
@@ -1,5 +1,8 @@
-{% set title = 'Search' %}
-{% set page_heading = 'Search' %}
+{% set page_meta = {
+	title: 'Search',
+	page_heading: 'Search',
+	id: 'search'
+} %}
 {% extends 'layouts/default.njk' %}
 
 {% block content %}
