--- a/src/views/layouts/default.njk
+++ b/src/views/layouts/default.njk
@@ -2,12 +2,13 @@
 <html lang="en">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>{{ title }}</title>
+<title>{{ page_meta.title }}</title>
 <link rel="stylesheet" href="/css/index.css">
 <script type="module" src="/mjs/index.mjs" defer></script>
+<body id="page_{{ page_meta.id }}">
 <main>
 	<header>
-		<h1>{{ page_heading }}</h1>
+		<h1>{{ page_meta.page_heading }}</h1>
 	</header>
 	{% block content %}{% endblock %}
 </main>
