--- a/src/public/css/patterns/list_tracks.css
+++ b/src/public/css/patterns/list_tracks.css
@@ -1,5 +1,5 @@
 .list_tracks {
-	--list-tracks-image-dimension: 2rem;
+	--list-tracks-image-dimension: 4rem;
 
 	list-style-type: "";
 	padding-inline-start: 0;
@@ -42,6 +42,7 @@
 
 .list_tracks .track_artists {
 	grid-area: artists;
+	align-self: end;
 	font-weight: 700;
 }
 
@@ -61,6 +62,7 @@
 .list_tracks .track_duration {
 	grid-area: duration;
 	align-self: center;
+	justify-self: end;
 }
 
 .list_tracks .track_actions {
