--- a/src/views/search.njk
+++ b/src/views/search.njk
@@ -12,31 +12,31 @@
 			{% for item in items %}
 				<li>
 					<dl>
-						{# {{item | dump}} #}
 						<div class="track_album">
 							<dt>Album art</dt>
 							<dd>
-								<img src="{{ item.album.images[0].url }}" width="32" height="32" alt="{{ item.album.name }}">
+								<picture>
+									<source srcset="{{ item.album_images.large }}" media="(min-resolution: 4x)">
+									<img src="{{ item.album_images.default }}" width="64" height="64" alt="{{ item.album_name }}">
+								</picture>
 							</dd>
 						</div>
 						<div class="track_artists">
 							<dt>Artist(s)</dt>
-							{% for artist in item.artists %}
-								<dd>{{ artist.name }}</dd>
-							{% endfor %}
+							<dd>{{ item.artists }}</dd>
 						</div>
 						<div class="track_name">
 							<dt>Track name</dt>
-							<dd>{{ item.name }}</dd>
+							<dd>{{ item.track_name }}</dd>
 						</div>
 						<div class="track_duration">
 							<dt>Duration</dt>
-							<dd>{{ item.duration_ms }}</dd>
+							<dd>{{ item.duration }}</dd>
 						</div>
 						<div class="track_actions">
 							<dt>Actions</dt>
 							<dd>
-								<button type="submit" name="add" value="{{ item.id }}">
+								<button type="submit" name="add" value="{{ item.track_id }}">
 									Add
 								</button>
 						</div>
