--- a/src/views/partials/form_search.njk
+++ b/src/views/partials/form_search.njk
@@ -1,9 +1,10 @@
 <pm-search>
 	<form method="GET" action="/search">
+		<input type="hidden" name="offset" value="{{ offset }}">
 		<div class="form_row">
-			<label for="input_search_query">Search for a song:</label>
+			<label for="input_search">Search for a song:</label>
 			<div class="form_field">
-				<input type="search" name="query_text" id="input_search_query" value="{{ query }}" required>
+				<input type="search" name="search" id="input_search" value="{{ search }}" required>
 			</div>
 		</div>
 		<div class="form_actions">
