--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -4,4 +4,6 @@
 @import 'patterns/list_tracks.css';
 @import 'patterns/form_row.css';
 @import 'patterns/form_field.css';
+@import 'patterns/pagination.css';
+@import 'patterns/button.css';
 @import 'components/pm-search.css';
