Clean up multiple searches are building selected songs

--- a/src/public/css/view-transitions.css
+++ b/src/public/css/view-transitions.css
@@ -1,40 +1,49 @@
 @view-transition {
-  navigation: auto;
+	navigation: auto;
+	types: next, previous, reload;
 }
 
-::view-transition-group(root) {
-	animation-duration: 0.5s;
-}
-
-/* Create a custom animation */
-
-@keyframes move-out {
+@keyframes slide-in-from-left {
 	from {
-			transform: translateY(0%);
-	}
-
-	to {
-			transform: translateY(-100%);
+		translate: -100vw 0;
 	}
 }
-
-@keyframes move-in {
+@keyframes slide-in-from-right {
 	from {
-			transform: translateY(100%);
+		translate: 100vw 0;
 	}
-
+}
+@keyframes slide-out-to-left {
 	to {
-			transform: translateY(0%);
+		translate: -100vw 0;
+	}
+}
+@keyframes slide-out-to-right {
+	to {
+		translate: 100vw 0;
+	}
+}
+@keyframes scale-up {
+	from {
+		scale: 0;
+	}
+}
+@keyframes scale-down {
+	to {
+		scale: 0;
+	}
+}
+@keyframes fade-in {
+	from {
+		opacity: 0;
+	}
+}
+@keyframes fade-out {
+	to {
+		opacity: 0;
 	}
 }
 
-/* Apply the custom animation to the old and new page states */
-
-::view-transition-old(root) {
-	animation: 0.4s ease-in both move-out;
+::view-transition-group(*) {
+	animation-duration: 1s;
 }
-
-/* 
-For pagination:
-https://developer.chrome.com/docs/web-platform/view-transitions/cross-document
-*/
