--- a/src/views/selected-songs.njk
+++ b/src/views/selected-songs.njk
@@ -21,7 +21,7 @@
 							<div class="track_actions">
 								<dt>Actions</dt>
 								<dd>
-									<button type="submit" name="remove" value="{{ track.id }}">
+									<button type="submit" name="remove" value="{{ track.id }}" formaction="/selected-songs">
 										Remove
 									</button>
 								</dd>
