Add recommendations API, and render the resulting list of tracks

--- a/src/views/preview-recommendations.njk
+++ b/src/views/preview-recommendations.njk
@@ -5,5 +5,13 @@
 } %}
 {% extends 'layouts/default.njk' %}
 {% block content %}
-	…
+	<ul class="list_tracks">
+		{% for track in tracks %}
+			<li>
+				<dl>
+					{% include 'partials/track_info.njk' %}
+				</dl>
+			</li>
+		{% endfor %}
+	</ul>
 {% endblock%}
