Add binary decision layout for form_actions. Clean up list_tracks if item added

--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -3,6 +3,7 @@
 @import 'defaults.css';
 @import 'patterns/list_tracks.css';
 @import 'patterns/form_row.css';
+@import 'patterns/form_actions.css';
 @import 'patterns/form_field.css';
 @import 'patterns/pagination.css';
 @import 'patterns/button.css';
