Clean up list_tracks. Move page descriptions into the header

--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -7,4 +7,5 @@
 @import 'patterns/form_field.css';
 @import 'patterns/pagination.css';
 @import 'patterns/button.css';
+@import 'patterns/show_selected.css';
 @import 'components/pm-search.css';
