--- a/src/views/search.njk
+++ b/src/views/search.njk
@@ -47,8 +47,8 @@
 		</div>
 
 		{% if selected.length %}
-			<p>
-				{{ selected.length }} item(s) selected
+			<p class="show_selected">
+				{{ selected.length }} song(s) selected
 				<button type="submit" formaction="/selected-songs">Show my selected songs</button>
 			</p>
 		{% endif %}
