--- a/src/public/css/patterns/list_tracks.css
+++ b/src/public/css/patterns/list_tracks.css
@@ -14,6 +14,20 @@
 .list_tracks dl {
 	display: grid;
 	grid-template-areas: 
+		"image artists duration"
+		"image title   duration"
+	;
+	grid-template-columns: 
+		var(--list-tracks-image-dimension)
+		auto
+		5ch
+	;
+	column-gap: 1rem;
+	margin: 0;
+}
+
+.list_tracks dl:has(> *:nth-child(5)) {
+	grid-template-areas: 
 		"image artists duration actions"
 		"image title   duration actions"
 	;
@@ -21,10 +35,8 @@
 		var(--list-tracks-image-dimension)
 		auto
 		5ch
-		4.5rem
+		minmax(min-content, 4.5rem)
 	;
-	column-gap: 1rem;
-	margin: 0;
 }
 
 .list_tracks dt {
